# beauty-test

./: pyproject.toml
beauty_test/: fifth.py  first.py  fourth.md  second.py  third.py
